# ASKXBOT

./: README.md  TODO.md  index.html  metadata.json  package-lock.json  package.json
backend/: backend.spec  main.py  pyproject.toml  requirements.txt  run_app.py
backend/app/api/v1/endpoints/: account.py  api_keys.py  auth.py  billing.py  channels.py  context_lake.py  dashboard.py  github.py  mcp_servers.py  memory.py  nanobot.py  organizations.py  projects.py  settings.py  skills.py  tasks.py
backend/app/db/: __init__.py  database.py
backend/app/models/: account.py  auth.py  organization.py  project.py  skill.py  task.py
backend/app/services/: account.py  auth.py  organization.py  project.py  skill.py  task.py
backend/app/services/nanobot/: __init__.py  __init__HEAD.py
backend/app/utils/: __init__.py  logger.py
doc/: api_design.md
src/: App.tsx  index.css  translations.ts
src/components/: AccountModal.tsx  AddMemberModal.tsx  AgentComputerSidebar.tsx  AttachFilesModal.tsx  ContextLake.tsx  CreateOrganizationModal.tsx  CreateProjectModal.tsx  Dashboard.tsx  InviteMembersModal.tsx  LandingPage.tsx  Layout.tsx  LoginPage.tsx  ManageOrganizationModal.tsx  MockGitHubPage.tsx  MockSkillsShPage.tsx  OrganizationModal.tsx  PaymentPage.tsx  PlansAndPricing.tsx  ProjectPage.tsx  RegisterPage.tsx  SettingsAccessChannels.tsx  SettingsAccount.tsx  SettingsApiKeys.tsx  SettingsCodeProxy.tsx  SettingsContextLake.tsx  SettingsCredits.tsx  SettingsGitHub.tsx  SettingsLayout.tsx  SettingsMCPDetail.tsx  SettingsMCPServers.tsx  SettingsMemory.tsx  SettingsPlans.tsx  (+11 more)
(+14 files in other folders)
