[project]
name = "nanobot-backend"
version = "0.1.0"
description = "NanoMate Backend API Server"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"}
]

dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.1,<1.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "litellm>=1.81.5,<2.0.0",
    "loguru>=0.7.3,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
nanobot-backend = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.sources]
"app" = "app"
